svc.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: example
spec:
  selector:
    app: myapp
  ports:
  - name: 8000-tcp
    port: 8000
    protocol: TCP
